# MatrixMultiplication

./: CMakeLists.txt  test_config  test_config_data  time_test.py
src/: CMakeLists.txt
src/header/utils/: console_utils.h  time_utils.h  utils.h
src/openmp/: CMakeLists.txt  gemm_packing_4_4_openmp_0.c  gemm_packing_4_4_openmp_1.c  row_openmp.c
src/pthread/: CMakeLists.txt  gemm_packing_4_4_pthread_0.c
src/serial/: CMakeLists.txt  gemm0.c  gemm1.c  gemm_4_1_0.c  gemm_4_1_1.c  gemm_4_1_2.c  gemm_4_1_3.c  gemm_4_1_4.c  gemm_4_4_0.c  gemm_4_4_1.c  gemm_4_4_2.c  gemm_blocking_4_4_0.c  gemm_openblas.c  gemm_packing_4_4_0.c  gemm_packing_4_4_1.c  gemm_packing_4_4_2.c  pre_transpose.c  simple.c
src/serial/avx/: CMakeLists.txt  gemm_4_4_3_avx.c  pre_transpose_avx.c  vector_mul_avx.c
src/serial/fma/: CMakeLists.txt  gemm_4_4_3_fma.c  vector_mul_fma.c
src/util/: console_utils.c  time_utils.c  utils.c
valgrind/: cache_profile.sh  pre_transpose_1000_1000_1000  simple_1000_1000_1000
